# ics_2000_python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
ics_2000/: command.py  config.py  encryption.py  hub.py
ics_2000/entities/: color_temperature_device.py  device.py  dim_device.py  entity.py  switch_device.py
ics_2000/model/: device_config.py  device_data.py  entity_type.py  smart_meter_data.py  smart_meter_data_current.py
tests/: test_hub.py
