[tool.poetry]
name = "ics_2000_python"
version = "0.1.0"
description = ""
authors = ["iiTzArcur <zefanjaj@gmail.com>"]
readme = "README.md"
packages = [{include = "ics_2000"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pycryptodome = "^3.21.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
