[tool.poetry]
name = "ics_2000_python"
version = "0.1.1"
description = ""
authors = ["iiTzArcur <zefanjaj@gmail.com>"]
readme = "README.md"
packages = [{include = "ics_2000"}]
keywords = ["ics_2000", "ics-2000", "klikaanklikuit"]
repository = "https://github.com/zefanjajobse/ics_2000_python"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pycryptodome = "^3.21.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
